--- a/software.html
+++ b/software.html
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('header-software.jpeg'); /* Cambia esta imagen si lo deseas */
+      --header-img-url: url('211.jpg');
     }
 
     *{box-sizing:border-box}
@@ -200,7 +200,7 @@
 
   <!-- IMAGEN 1 -->
   <div style="margin:28px 0;text-align:center;">
-    <img src="scribus1.jpg" class="img-zoomable" alt="Interfaz principal de Scribus" style="max-width:100%;border-radius:12px;">
+    <img src="212.png" class="img-zoomable" alt="Interfaz principal de Scribus" style="max-width:100%;border-radius:12px;">
     <p style="color:var(--muted);font-size:14px;">Interfaz principal de Scribus, con paneles de estilos y páginas.</p>
   </div>
 
@@ -214,7 +214,7 @@
 
   <!-- IMAGEN 2 -->
   <div style="margin:28px 0;text-align:center;">
-    <img src="scribus2.jpg" class="img-zoomable" alt="Ejemplo de maquetación con Scribus" style="max-width:100%;border-radius:12px;">
+    <img src="213.jpg" class="img-zoomable" alt="Ejemplo de maquetación con Scribus" style="max-width:100%;border-radius:12px;">
     <p style="color:var(--muted);font-size:14px;">Ejemplo de maquetación editorial creada con Scribus.</p>
   </div>
 
