--- a/tipografia.html
+++ b/tipografia.html
@@ -136,6 +136,16 @@
         <svg width="18" height="18" fill="none" viewBox="0 0 24 24"><path d="M12 2v6" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M12 16v6" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M4.9 7.5l4.24 4.24" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M19.1 16.5l-4.24-4.24" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/></svg>
         Proceso de maquetación
       </a>
+
+          <a href="software.html" class="navlink" aria-current="page">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+        <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.4"/>
+        <path d="M7 9h4M7 13h7" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+      </svg>
+      Software recomendado
+    </a>
+
+      
     </nav>
 
     <div class="actions">
