--- a/reticula.html
+++ b/reticula.html
@@ -163,6 +163,15 @@
         </svg>
         Proceso de maquetación
       </a>
+
+          <a href="software.html" class="navlink" aria-current="page">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+        <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.4"/>
+        <path d="M7 9h4M7 13h7" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+      </svg>
+      Software recomendado
+    </a>
+
     </nav>
 
     <div class="actions">
