--- a/reticula.html
+++ b/reticula.html
@@ -28,7 +28,7 @@
 
     .sidebar{
       width:260px; background:linear-gradient(180deg,var(--panel), #0b0810); border-right:1px solid var(--border);
-      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:auto;
+      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:hidden;
     }
 
     .brand{display:flex; gap:12px; align-items:center; margin-bottom:18px}
@@ -163,7 +163,6 @@
         </svg>
         Proceso de maquetación
       </a>
-
           <a href="software.html" class="navlink" aria-current="page">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
         <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.4"/>
@@ -171,7 +170,6 @@
       </svg>
       Software recomendado
     </a>
-
     </nav>
 
     <div class="actions">
