--- a/imagenes.html
+++ b/imagenes.html
@@ -28,7 +28,7 @@
 
     .sidebar{
       width:260px; background:linear-gradient(180deg,var(--panel), #0b0810); border-right:1px solid var(--border);
-      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:auto;
+      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:hidden;
     }
 
     .brand{display:flex; gap:12px; align-items:center; margin-bottom:18px}
