--- a/color.html
+++ b/color.html
@@ -56,7 +56,7 @@
       stroke: var(--white); /* 👈 ICONO BLANCO AL ACTIVARSE */
     }
 
-    .sidebar .actions{margin-top:40px;display:flex;flex-direction:column;gap:10px}
+    .sidebar .actions{margin-top:auto;display:flex;flex-direction:column;gap:10px}
     .btn{display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
     .btn.mail{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:var(--white)}
     .btn.ghost{background:transparent;border:1px solid var(--border);color:var(--muted)}
